--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
           <span></span>
         </div>
         <ul class="navbar-list">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#project">Project</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#home" translate="no">Home</a></li>
+          <li><a href="#about" translate="no">About</a></li>
+          <li><a href="#skills" translate="no">Skills</a></li>
+          <li><a href="#project" translate="no">Project</a></li>
+          <li><a href="#contact" translate="no">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -106,18 +106,6 @@
           >
             <i class="fas fa-download"></i>
           </a>
-          <script>
-            function confirmDownload(event) {
-              const userConfirmed = confirm(
-                "Are you sure you want to download the CV?"
-              );
-
-              if (!userConfirmed) {
-                event.preventDefault();
-              }
-              return userConfirmed;
-            }
-          </script>
         </div>
         <div class="j-img" data-aos="zoom-out">
           <img src="assets/img/homea.png" alt="Dirga Febriyanda" />
@@ -136,13 +124,13 @@
           />
         </div>
         <div class="about-text" data-aos="fade-left">
-          <h4>Welcome to about me</h4>
+          <h4>Discover My World</h4>
           <h2 class="description">Creative Web Developer</h2>
           <p>
-            Hello! I'm Dirga Febriyanda, a passionate web developer focused on
-            building innovative, user-centered applications. With expertise in
-            both front-end and back-end technologies, I am dedicated to
-            delivering effective solutions that meet users' needs seamlessly.
+            A passionate web developer focused on building innovative,
+            user-centered applications. With expertise in both front-end and
+            back-end technologies, I am dedicated to delivering effective
+            solutions that meet users' needs seamlessly.
           </p>
           <p>
             Staying current with the latest advancements, I continuously sharpen
@@ -164,51 +152,51 @@
         <div class="skill-set">
           <div class="skill-item" data-aos="fade-up" data-aos-delay="100">
             <img src="assets/img/logo/html-logo.png" alt="HTML" />
-            <span class="skill-level">HTML</span>
+            <span class="skill-level" translate="no">HTML</span>
           </div>
           <div class="skill-item" data-aos="fade-up" data-aos-delay="100">
             <img src="assets/img/logo/css-logo.png" alt="CSS" />
-            <span class="skill-level">CSS</span>
+            <span class="skill-level" translate="no">CSS</span>
           </div>
           <div class="skill-item" data-aos="fade-up" data-aos-delay="100">
             <img src="assets/img/logo/js-logo.png" alt="JavaScript" />
-            <span class="skill-level">JavaScript</span>
+            <span class="skill-level" translate="no">JavaScript</span>
           </div>
           <div class="skill-item" data-aos="fade-up" data-aos-delay="100">
             <img src="assets/img/logo/php-logo.png" alt="PHP" />
-            <span class="skill-level">PHP</span>
+            <span class="skill-level" translate="no">PHP</span>
           </div>
           <div class="skill-item" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/logo/laravel-logo.png" alt="Laravel" />
-            <span class="skill-level">Laravel</span>
+            <span class="skill-level" translate="no">Laravel</span>
           </div>
           <div class="skill-item" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/logo/bootstrap-logo.png" alt="Bootstrap" />
-            <span class="skill-level">Bootstrap</span>
+            <span class="skill-level" translate="no">Bootstrap</span>
           </div>
           <div class="skill-item" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/logo/tailwind-logo.png" alt="Tailwind CSS" />
-            <span class="skill-level">Tailwind </span>
+            <span class="skill-level" translate="no">Tailwind </span>
           </div>
           <div class="skill-item" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/logo/vue-logo.png" alt="Vue.js" />
-            <span class="skill-level">Vue </span>
+            <span class="skill-level" translate="no">Vue </span>
           </div>
           <div class="skill-item" data-aos="fade-up" data-aos-delay="300">
             <img src="assets/img/logo/git-logo.png" alt="Git" />
-            <span class="skill-level">Git</span>
+            <span class="skill-level" translate="no">Git</span>
           </div>
           <div class="skill-item" data-aos="fade-up" data-aos-delay="300">
             <img src="assets/img/logo/photoshop-logo.png" alt="Photoshop" />
-            <span class="skill-level">Photoshop</span>
+            <span class="skill-level" translate="no">Photoshop</span>
           </div>
           <div class="skill-item" data-aos="fade-up" data-aos-delay="300">
             <img src="assets/img/logo/figma-logo.png" alt="Figma" />
-            <span class="skill-level">Figma</span>
+            <span class="skill-level" translate="no">Figma</span>
           </div>
           <div class="skill-item" data-aos="fade-up" data-aos-delay="300">
             <img src="assets/img/logo/coreldraw-logo.png" alt="CorelDRAW" />
-            <span class="skill-level">CorelDraw </span>
+            <span class="skill-level" translate="no">CorelDraw </span>
           </div>
         </div>
       </section>
@@ -263,7 +251,7 @@
                           src="assets/img/logo/laravel-logo.png"
                           alt="Laravel"
                         />
-                        <span class="p-tools-text">Laravel</span>
+                        <span class="p-tools-text" translate="no">Laravel</span>
                       </div>
                     </div>
                     <div class="swiper-slide">
@@ -272,25 +260,27 @@
                           src="assets/img/logo/bootstrap-logo.png"
                           alt="Bootstrap"
                         />
-                        <span class="p-tools-text">Bootstrap</span>
+                        <span class="p-tools-text" translate="no"
+                          >Bootstrap</span
+                        >
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="p-tools">
                         <img src="assets/img/logo/mysql-logo.png" alt="MySQL" />
-                        <span class="p-tools-text">MySQL</span>
+                        <span class="p-tools-text" translate="no">MySQL</span>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="p-tools">
                         <img src="assets/img/logo/html-logo.png" alt="HTML" />
-                        <span class="p-tools-text">HTML</span>
+                        <span class="p-tools-text" translate="no">HTML</span>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="p-tools">
                         <img src="assets/img/logo/css-logo.png" alt="Laravel" />
-                        <span class="p-tools-text">CSS</span>
+                        <span class="p-tools-text" translate="no">CSS</span>
                       </div>
                     </div>
                     <div class="swiper-slide">
@@ -299,7 +289,9 @@
                           src="assets/img/logo/js-logo.png"
                           alt="JavaScipt"
                         />
-                        <span class="p-tools-text">JavaScipt</span>
+                        <span class="p-tools-text" translate="no"
+                          >JavaScipt</span
+                        >
                       </div>
                     </div>
                     <div class="swiper-slide">
@@ -308,7 +300,7 @@
                           src="assets/img/logo/php-logo.png"
                           alt="JavaScipt"
                         />
-                        <span class="p-tools-text">PHP</span>
+                        <span class="p-tools-text" translate="no">PHP</span>
                       </div>
                     </div>
                   </div>
@@ -366,7 +358,7 @@
                           src="assets/img/logo/laravel-logo.png"
                           alt="Laravel"
                         />
-                        <span class="p-tools-text">Laravel</span>
+                        <span class="p-tools-text" translate="no">Laravel</span>
                       </div>
                     </div>
                     <div class="swiper-slide">
@@ -375,25 +367,27 @@
                           src="assets/img/logo/bootstrap-logo.png"
                           alt="Bootstrap"
                         />
-                        <span class="p-tools-text">Bootstrap</span>
+                        <span class="p-tools-text" translate="no"
+                          >Bootstrap</span
+                        >
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="p-tools">
                         <img src="assets/img/logo/mysql-logo.png" alt="MySQL" />
-                        <span class="p-tools-text">MySQL</span>
+                        <span class="p-tools-text" translate="no">MySQL</span>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="p-tools">
                         <img src="assets/img/logo/html-logo.png" alt="HTML" />
-                        <span class="p-tools-text">HTML</span>
+                        <span class="p-tools-text" translate="no">HTML</span>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="p-tools">
                         <img src="assets/img/logo/css-logo.png" alt="Laravel" />
-                        <span class="p-tools-text">CSS</span>
+                        <span class="p-tools-text" translate="no">CSS</span>
                       </div>
                     </div>
                     <div class="swiper-slide">
@@ -402,7 +396,9 @@
                           src="assets/img/logo/js-logo.png"
                           alt="JavaScipt"
                         />
-                        <span class="p-tools-text">JavaScipt</span>
+                        <span class="p-tools-text" translate="no"
+                          >JavaScipt</span
+                        >
                       </div>
                     </div>
                     <div class="swiper-slide">
@@ -411,7 +407,7 @@
                           src="assets/img/logo/php-logo.png"
                           alt="JavaScipt"
                         />
-                        <span class="p-tools-text">PHP</span>
+                        <span class="p-tools-text" translate="no">PHP</span>
                       </div>
                     </div>
                   </div>
@@ -459,7 +455,7 @@
                           src="assets/img/logo/laravel-logo.png"
                           alt="Laravel"
                         />
-                        <span class="p-tools-text">Laravel</span>
+                        <span class="p-tools-text" translate="no">Laravel</span>
                       </div>
                     </div>
                     <div class="swiper-slide">
@@ -468,25 +464,27 @@
                           src="assets/img/logo/bootstrap-logo.png"
                           alt="Bootstrap"
                         />
-                        <span class="p-tools-text">Bootstrap</span>
+                        <span class="p-tools-text" translate="no"
+                          >Bootstrap</span
+                        >
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="p-tools">
                         <img src="assets/img/logo/mysql-logo.png" alt="MySQL" />
-                        <span class="p-tools-text">MySQL</span>
+                        <span class="p-tools-text" translate="no">MySQL</span>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="p-tools">
                         <img src="assets/img/logo/html-logo.png" alt="HTML" />
-                        <span class="p-tools-text">HTML</span>
+                        <span class="p-tools-text" translate="no">HTML</span>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="p-tools">
                         <img src="assets/img/logo/css-logo.png" alt="Laravel" />
-                        <span class="p-tools-text">CSS</span>
+                        <span class="p-tools-text" translate="no">CSS</span>
                       </div>
                     </div>
                     <div class="swiper-slide">
@@ -495,7 +493,9 @@
                           src="assets/img/logo/js-logo.png"
                           alt="JavaScipt"
                         />
-                        <span class="p-tools-text">JavaScipt</span>
+                        <span class="p-tools-text" translate="no"
+                          >JavaScipt</span
+                        >
                       </div>
                     </div>
                     <div class="swiper-slide">
@@ -504,7 +504,7 @@
                           src="assets/img/logo/php-logo.png"
                           alt="JavaScipt"
                         />
-                        <span class="p-tools-text">PHP</span>
+                        <span class="p-tools-text" translate="no">PHP</span>
                       </div>
                     </div>
                   </div>
@@ -559,7 +559,7 @@
                     <div class="swiper-slide">
                       <div class="p-tools">
                         <img src="assets/img/logo/vue-logo.png" alt="Vue" />
-                        <span class="p-tools-text">Vue</span>
+                        <span class="p-tools-text" translate="no">Vue</span>
                       </div>
                     </div>
                     <div class="swiper-slide">
@@ -568,19 +568,21 @@
                           src="assets/img/logo/bootstrap-logo.png"
                           alt="Bootstrap"
                         />
-                        <span class="p-tools-text">Bootstrap</span>
+                        <span class="p-tools-text" translate="no"
+                          >Bootstrap</span
+                        >
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="p-tools">
                         <img src="assets/img/logo/html-logo.png" alt="HTML" />
-                        <span class="p-tools-text">HTML</span>
+                        <span class="p-tools-text" translate="no">HTML</span>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="p-tools">
                         <img src="assets/img/logo/css-logo.png" alt="Laravel" />
-                        <span class="p-tools-text">CSS</span>
+                        <span class="p-tools-text" translate="no">CSS</span>
                       </div>
                     </div>
                     <div class="swiper-slide">
@@ -589,7 +591,9 @@
                           src="assets/img/logo/js-logo.png"
                           alt="JavaScipt"
                         />
-                        <span class="p-tools-text">JavaScipt</span>
+                        <span class="p-tools-text" translate="no"
+                          >JavaScipt</span
+                        >
                       </div>
                     </div>
                   </div>
@@ -631,36 +635,6 @@
 
             <button type="submit">Send Message</button>
           </form>
-
-          <script>
-            document
-              .getElementById("contactForm")
-              .addEventListener("submit", function (event) {
-                event.preventDefault(); // Mencegah form dari pengiriman default
-
-                var name = document.getElementById("name").value;
-                var email = document.getElementById("email").value;
-                var message = document.getElementById("message").value;
-
-                var mailtoLink =
-                  "mailto:dirgafebriyanda12@gmail.com" +
-                  "?email=" +
-                  encodeURIComponent("Form Submission - " + name) +
-                  "&body=" +
-                  encodeURIComponent(
-                    "Name: " +
-                      name +
-                      "\n\n" +
-                      "email: " +
-                      email +
-                      "\n\n" +
-                      "Message: " +
-                      message
-                  );
-
-                window.location.href = mailtoLink; // Membuka aplikasi email dengan link mailto
-              });
-          </script>
         </div>
         <div class="contact-box" data-aos="fade-left">
           <h4>Ready to Collaborate</h4>
@@ -682,7 +656,7 @@
     <footer>
       <div class="copyright">
         <div class="end-text1">
-          <p>Ⓒ 2022 Dirga Febriyanda. All Rights Reserved</p>
+          <p>Ⓒ 2024 Dirga Febriyanda. All Rights Reserved</p>
         </div>
       </div>
     </footer>
@@ -694,6 +668,49 @@
 
     <!-- My Own JS -->
     <script src="assets/js/script.js"></script>
+
+    <script>
+      document
+        .getElementById("contactForm")
+        .addEventListener("submit", function (event) {
+          event.preventDefault();
+
+          var name = document.getElementById("name").value;
+          var email = document.getElementById("email").value;
+          var message = document.getElementById("message").value;
+
+          var mailtoLink =
+            "mailto:dirgafebriyanda12@gmail.com" +
+            "?email=" +
+            encodeURIComponent("Form Submission - " + name) +
+            "&body=" +
+            encodeURIComponent(
+              "Name: " +
+                name +
+                "\n\n" +
+                "email: " +
+                email +
+                "\n\n" +
+                "Message: " +
+                message
+            );
+
+          window.location.href = mailtoLink;
+        });
+    </script>
+
+    <script>
+      function confirmDownload(event) {
+        const userConfirmed = confirm(
+          "Are you sure you want to download the CV?"
+        );
+
+        if (!userConfirmed) {
+          event.preventDefault();
+        }
+        return userConfirmed;
+      }
+    </script>
 
     <!-- Swiper JS-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
