--- a/index.html
+++ b/index.html
@@ -3,9 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dirga Febriyanda - Web Developer</title>
 
-    <title>Dirga Febriyanda</title>
+    <!-- Meta Description -->
+    <meta
+      name="description"
+      content="Dirga Febriyanda is a passionate web developer specializing in creating innovative, user-centered applications using the latest technologies. Contact for web development projects and collaborations."
+    />
 
+    <!-- Meta Keywords -->
+    <meta
+      name="keywords"
+      content="web developer, front-end development, back-end development, web design, Dirga Febriyanda, full-stack developer, creative web solutions, innovative web applications"
+    />
+
+    <!-- Meta Author -->
+    <meta name="author" content="Dirga Febriyanda" />
+
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta property="og:title" content="Dirga Febriyanda - Web Developer" />
+    <meta
+      property="og:description"
+      content="Discover the portfolio and services of Dirga Febriyanda, a creative web developer specializing in user-friendly, innovative web applications."
+    />
+    <meta
+      property="og:image"
+      content="https://dirgafebriyanda.github.io/assets/img/homea.png"
+    />
+    <meta property="og:url" content="https://dirgafebriyanda.github.io/" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Dirga Febriyanda - Web Developer" />
+    <meta
+      name="twitter:description"
+      content="Explore the work of Dirga Febriyanda, a creative web developer offering cutting-edge web development services."
+    />
+    <meta
+      name="twitter:image"
+      content="https://dirgafebriyanda.github.io/assets/img/homea.png"
+    />
+    <link rel="icon" href="assets/img/homea.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/img/homea.png" type="image/x-icon" />
     <!-- My Own CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
 
@@ -46,7 +85,7 @@
     <header>
       <nav class="navbar">
         <h3 class="navbar-logo">
-          <a href="#">df</a>
+          <a href="#" translate="no">df</a>
         </h3>
         <div class="navbar-toggle">
           <span></span>
