--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
             <span class="skill-level" translate="no">Photoshop</span>
           </div>
           <div class="skill-item" data-aos="fade-up" data-aos-delay="300">
-            <img src="assets/img/logo/figma-logo.png" alt="Figma" />
-            <span class="skill-level" translate="no">Figma</span>
+            <img src="assets/img/logo/mysql-logo.png" alt="Figma" />
+            <span class="skill-level" translate="no">MySQL</span>
           </div>
           <div class="skill-item" data-aos="fade-up" data-aos-delay="300">
             <img src="assets/img/logo/coreldraw-logo.png" alt="CorelDRAW" />
