--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <i class="fab fa-github"></i>
           </a>
           <a
-            href="assets/cv-2024.pdf"
+            href="assets/CV Dirga Febriyanda.pdf"
             class="h-social-media"
             onclick="return confirmDownload(event)"
           >
