--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
               </div>
             </div>
           </a>
-          <a href="https://github.com/dirgafebriyanda/webistekita" class="project-item" data-aos="fade-left">
+          <a href="https://webistekita.my.id" class="project-item" data-aos="fade-left">
             <!-- Swiper pertama -->
             <div class="swiper mySwiper1">
               <div class="swiper-wrapper">
